--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-search-field": "^1.2.1",
+    "react-snowfall": "^1.2.1",
+    "react-toastify": "8.0.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
@@ -49,7 +51,7 @@
   "devDependencies": {
     "bootstrap": "^4.6.0",
     "gsap": "^3.6.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "^7.0.1",
     "react-bootstrap": "^1.6.0",
     "sass-loader": "^11.1.1"
   }
